--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
         "@tailwindcss/typography": "^0.5.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.6.4",
+        "laravel-echo": "^2.0.2",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.14",
+        "pusher-js": "^8.4.0",
         "tailwindcss": "^3.4.17",
         "vite": "^5.0.0"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.0.9",
-        "alpinejs": "^3.14.8"
+        "alpinejs": "^3.14.8",
+        "sweetalert2": "^11.17.2"
     }
 }
